--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,7 +10,17 @@
 </head>
 <body>
    <div class="container">
-    <h1 class="header">Welcome to p2p File sharing!</h1>
+    <div class="row ">
+        <div class="col center-align">
+            <img src="{{ url_for('static', filename= 'icons/logo.png') }}" width="150" height="150">
+        </div>
+        <div class="col center-align">
+            <h1 class="header">Welcome to p2p File sharing!</h1>
+        </div>
+        
+    </div>
+    
+    
     <form id="searchForm">
         <div class="row">
             <div class="input-field col s5">
@@ -19,11 +29,17 @@
             <div class="input-field col s5">
                 <input type="search" id="search-filehash" name="filehash" placeholder="Hash" aria-label="Search">
             </div>
-            <div class="input-field col s2">
+            <div class="input-field col s1">
                 <button class="btn waves-effect waves-light" type="submit" name="action" id="submit">Search
                     <i class="material-icons right">search</i>
                 </button>
             </div>
+            <div class="input-field col s1">
+                <a class="btn waves-effect waves-light teal lighten-3" href="/stats">Stats
+                    <i class="material-icons right">insert_chart</i>
+                </a>
+            </div>
+            
         </div>
         
     </form>
@@ -51,6 +67,7 @@
 
             // Add the search word to the page
             $('#currentSearch').html('<p>Searched file: ' + searchedfilename +" "+ searchedfilehash +'</p>');
+            $('#searchResults').html("<p>Searching...</p>");
             
             // Get the form data
             var formData = {
@@ -108,7 +125,7 @@
                     console.error(xhr.responseText);
                 }
             });
-        }, 5000); // Poll every 5 seconds (adjust as needed)
+        }, 5000); // Poll every 5 seconds
 
     }
     pollForResult();
